--- a/src/app/pension/pension.component.html
+++ b/src/app/pension/pension.component.html
@@ -12,6 +12,9 @@
           <li class="nav-item">
             <a class="nav-link fst-italic" routerLink="/pension/save-pensioner">Pension Details</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link fst-italic" routerLink="/pension/delete-pensioner">Delete Pensioner</a>
+          </li>
         </ul>
         <form class="d-flex" >
           <a class="btn btn-outline-dark" routerLink="/" (click) = "onSignOut()">Sign Out</a>
