--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,6 +6,6 @@
         <a class="btn btn-primary text-center w-50" (click) = "onClickMember()"  routerLink="/register">Be a Member</a>
     </div>
     <div class="card-body">
-        <a class="btn btn-success text-center w-50" (click) = "onClickLogin()"  routerLink="/login">Login</a>
+        <a class="btn btn-success text-center w-50" (click) = "onClickLogin()"  routerLink="/signup">Login</a>
     </div>
 </div>
