--- a/src/app/pension/pensioner-form/pensioner-form.component.html
+++ b/src/app/pension/pensioner-form/pensioner-form.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+    <p class="m-3 text-center fst-italic " [ngClass] = "  enable  ? 'text-success fw-bold' : 'text-danger fw-bold' " *ngIf="enable">{{message}}</p>
     <form [formGroup]="pensionerDetails" (ngSubmit)="onSubmit()">
         <div class="row mt-lg-3">
             <div class="col-6 bg-outline-success">
