--- a/src/app/pension/calculation/calculation.component.html
+++ b/src/app/pension/calculation/calculation.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <form class=" form-control mt-lg-3  mt-md-3" #aadhaar="ngForm" (ngSubmit)="onSubmitAadhaar(aadhaar)">
+    <form class=" form-control mt-3  mt-md-4" #aadhaar="ngForm" (ngSubmit)="onSubmitAadhaar(aadhaar)">
         <div class="row">
             <div class="col fw-bold text-center fst-italic fst-normal m-auto">Aadhaar Number</div>
             <div class="col">
